# tasks

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml
.github/workflows/: ci.yml
backend/: .coveragerc  .env.example  .gitignore  .isort.cfg  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
backend/src/: main.py
backend/src/app/: __init__.py
backend/src/authentication/adapters/incoming/: config.py  controller.py  middleware.py
backend/src/authentication/adapters/outgoing/: memory.py
backend/src/authentication/domain/jwt/: token.py
backend/src/authentication/domain/model/: user.py
backend/src/authentication/domain/port/: incoming.py  outgoing.py
backend/src/authentication/domain/service/: auth.py
backend/src/tasks/: __init__.py  skeleton.py
backend/src/tasks/adapters/incoming/: controller.py
backend/src/tasks/adapters/incoming/api/: __init__.py
backend/src/tasks/adapters/incoming/api/security/: __init__.py
backend/src/tasks/adapters/outgoing/: memory.py
backend/src/tasks/domain/model/: task.py
backend/src/tasks/domain/port/: incoming.py  outgoing.py
backend/src/tasks/domain/service/: tasks.py
backend/tests/: skeleton_test.py
backend/tests/unit/authentication/adapters/incoming/: controller_test.py
backend/tests/unit/authentication/domain/service/: auth_test.py
backend/tests/unit/tasks/: conftest.py
docs/: conf.py  index.md
frontend/: Dockerfile  app.config.ts  app.vue  eslint.config.mjs  nuxt.config.ts  package.json
frontend/components/authentication/: Form.vue
frontend/composables/: useAPI.ts  useAuth.ts  useTasks.ts
frontend/middleware/: auth.ts  guest.ts
frontend/pages/: index.vue  login.vue  register.vue
frontend/plugins/: api.ts
nginx/: Dockerfile  nginx.conf
(+2 files in other folders)
